--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /*  your css code here. If applicable */
+.para1{
+	font-color: #00f;
+	background-color: #eee;
+}
+.para3{
+	font-color: #00f;
+	background-color: #eee;
+}
